objects/OAH_Case_List__c.object
<CustomObject>
    <label>OAH Case</label>
    <nameField>
        <label>OAH Case Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAH Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Cases (Contact)</relationshipLabel>
        <relationshipName>OAH_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civil_No__c</fullName>
        <label>Civil No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <inlineHelpText>Case Name is a free-form description of the case.  Case Number generally follows one of the following formats:  Board-Year-Number (CLB-2019-001) or Board-Type-Year-Number (CLB-LIC-2019-001).  Do not specify sequential number if it is to be auto-generated.</inlineHelpText>
        <label>Case Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACT 38</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Cease &amp; Desist</fullName>
                </value>
                <value>
                    <fullName>Citation</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>Dec Relief</fullName>
                </value>
                <value>
                    <fullName>Disability Benefits</fullName>
                </value>
                <value>
                    <fullName>Disciplinary</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>Lic Den</fullName>
                </value>
                <value>
                    <fullName>License-Other</fullName>
                </value>
                <value>
                    <fullName>OSC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Retirement Benefits</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>Tax Refund</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_Notes__c</fullName>
        <label>Bond Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Phase__c</fullName>
        <label>Case Phase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                    <default>true</default>
                    <label>Intake</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Remand</fullName>
                </value>
                <value>
                    <fullName>Not Appealed</fullName>
                </value>
                <value>
                    <fullName>Close Case</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <label>Bond Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1000</fullName>
                </value>
                <value>
                    <fullName>$2000</fullName>
                </value>
                <value>
                    <fullName>$10,000</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Re-Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reversed&amp;Remanded</fullName>
                </value>
                <value>
                    <fullName>Final Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Required__c</fullName>
        <label>Fee Required</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Notes__c</fullName>
        <label>Storage Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Appeal_Outcome__c</fullName>
        <label>Appeal Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reversed&amp;Remanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Court_Decision__c</fullName>
        <label>Court Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <description>Docket Sheet Title</description>
        <label>Document Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Agency__c</fullName>
        <label>Division-Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BREG</fullName>
                </value>
                <value>
                    <fullName>CAAP</fullName>
                </value>
                <value>
                    <fullName>DFI</fullName>
                </value>
                <value>
                    <fullName>ERS</fullName>
                </value>
                <value>
                    <fullName>EUTF</fullName>
                </value>
                <value>
                    <fullName>HCDA</fullName>
                </value>
                <value>
                    <fullName>HPEAP</fullName>
                </value>
                <value>
                    <fullName>INS</fullName>
                </value>
                <value>
                    <fullName>PDH</fullName>
                </value>
                <value>
                    <fullName>PUC</fullName>
                </value>
                <value>
                    <fullName>PVL</fullName>
                </value>
                <value>
                    <fullName>RICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Amount_Paid__c</fullName>
        <label>Fee Amount Paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$200</fullName>
                </value>
                <value>
                    <fullName>$1000</fullName>
                </value>
                <value>
                    <fullName>$1,000</fullName>
                    <isActive>false</isActive>
                    <label>$1,000</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Court_Order_Date__c</fullName>
        <label>Court Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearings_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hearings Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>Officer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <description>Location where file is stored</description>
        <label>Storage Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consolidated_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if this is a Consolidated Case File.</description>
        <inlineHelpText>Check this box only if this is a MAIN case that has secondary cases attached to it.  DO NOT check this box if this is a SECONDARY case.</inlineHelpText>
        <label>Consolidated Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Bond_Amount__c</fullName>
        <label>Other Bond Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Case_File__c</fullName>
        <formula>IF
(ISBLANK( OAH_Cons_Cases_Parent_Text__c ), 
&apos;MAIN&apos;, 
&apos;SECONDARY&apos;)</formula>
        <label>Type of Case File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Bond_Received__c</fullName>
        <label>Date Bond Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Notice_Issued__c</fullName>
        <label>Date Notice Issued</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Method__c</fullName>
        <label>Fee Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Box_Number__c</fullName>
        <label>Storage Box Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Payment_Method__c</fullName>
        <label>Bond Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Protest</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_File_Destroyed__c</fullName>
        <label>Date File Destroyed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Hearing__c</fullName>
        <label>Last Day of Hearing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Creation_Boards__c</fullName>
        <description>To modify the list of Boards that will auto-generate case numbers modify this picklist</description>
        <label>Case Creation Boards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>PDH</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Storage__c</fullName>
        <label>Date Sent to Storage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Oral_Argument__c</fullName>
        <label>Date of Oral Argument</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearings_Officer_Text__c</fullName>
        <formula>Hearings_Officer__r.LastName</formula>
        <label>Hearings Officer text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Oral_Argument__c</fullName>
        <description>Time of the Oral Argument</description>
        <label>Time of Oral Argument</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:15 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:00  PM</fullName>
                </value>
                <value>
                    <fullName>1:15  PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:45 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:15 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:45 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boards_and_Commissions__c</fullName>
        <label>Boards and Commissions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>ACU</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ARP</fullName>
                </value>
                <value>
                    <fullName>BAR</fullName>
                </value>
                <value>
                    <fullName>BEH</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>CEM</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>CLB</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>ENP</fullName>
                </value>
                <value>
                    <fullName>EVM</fullName>
                </value>
                <value>
                    <fullName>HAD</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MBS</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MMA</fullName>
                </value>
                <value>
                    <fullName>MVI</fullName>
                </value>
                <value>
                    <fullName>NAT</fullName>
                </value>
                <value>
                    <fullName>NHA</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>OST</fullName>
                </value>
                <value>
                    <fullName>PCO</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Hearing_Requested__c</fullName>
        <label>Date Hearing Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hearings_Officer_Notes__c</fullName>
        <label>Case Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Court_Decision_Comments__c</fullName>
        <label>Court Decision Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hearings_Officer_Senior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Hearings Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>Senior Hearings Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filing_Fee_Received_Date__c</fullName>
        <description>Date the Filing Fee was received</description>
        <label>Filing Fee Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Order_Proposed_Date__c</fullName>
        <label>Final Order - Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oral_Argument_Filing_Date__c</fullName>
        <label>Oral Argument Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OAH_Cons_Cases_Parent_Text__c</fullName>
        <description>Text field for OAH Consolidated Cases Parent lookup</description>
        <formula>OAH_Consolidated_Cases_Parent__c</formula>
        <label>OAH Cons Cases Parent Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Appeals_Box_Number__c</fullName>
        <label>Storage Appeals Box Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oral_Argument_Issuance_Date__c</fullName>
        <label>Oral Argument Issuance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage_Original_Box_Number__c</fullName>
        <label>Storage Original Box Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Creation_Board_Override__c</fullName>
        <label>Case Creation Board Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*-CN</fullName>
                </value>
                <value>
                    <fullName>*-DR</fullName>
                </value>
                <value>
                    <fullName>*-LIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OAH_Consolidated_Cases_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Consolidated Cases Parent</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Cases</relationshipLabel>
        <relationshipName>OAH_Consolidated_Case_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Transmitted_to_Cashier_Date__c</fullName>
        <label>Fee Transmitted to Cashier Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bond_Returned_to_Petitioner__c</fullName>
        <label>Date Bond Returned to Petitioner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bond_Transmitted_to_Cashier__c</fullName>
        <label>Date Bond Transmitted to Cashier</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Hearings_Officer__c</fullName>
        <label>Date Assigned to Hearings Officer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Case_Transmitted_to_Authority__c</fullName>
        <label>Date Case Transmitted to Authority</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Transmitted_to_AG_Court_Date__c</fullName>
        <label>Appeal Transmitted to AG-Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Notice_of_AppealOrder_Received__c</fullName>
        <label>Date Notice of Appeal/Order Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Submission_of_Closing_Briefs__c</fullName>
        <label>Date of Submission of Closing Briefs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bond_Deposited_Into_General_Funds__c</fullName>
        <label>Date Bond Deposited Into General Funds</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>NAME</columns>
        <columns>Date_Filed__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Phase__c</columns>
        <columns>Division_Agency__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Date_Filed__c</columns>
        <columns>Case_Name__c</columns>
        <columns>Type_of_Case_File__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Phase__c</columns>
        <columns>Division_Agency__c</columns>
        <columns>Hearings_Officer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Case_Number_No_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED(Name),
 NOT( 
   OR($Profile.Name = &quot;System Administrator&quot;,
      BEGINS( $User.Title , &quot;Legal Clerk&quot; ),
      BEGINS( $User.Title , &quot;Legal Secretary&quot; ),
      BEGINS( $User.Title , &quot;Senior Hearings Officer&quot;))))</errorConditionFormula>
        <errorMessage>Cannot Change Case Number   (see OAH Case validation rule)</errorMessage>
    </validationRules>
</CustomObject>